# language_modeling_transformer_xai

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
language_modeling_transformer_xai/: __init__.py  config.py  corpus.py  dataset.py  features.py  plots.py  tokenize.py
language_modeling_transformer_xai/modeling/: predict.py  train.py
models/: corpus_tokenizer.model  corpus_tokenizer.vocab
notebooks/Initial Tries/: 1. tokenization.ipynb  2. Data preparatin.ipynb  2. Data preparation.ipynb  3. SelfAttention.ipynb  5. ExplainableAI.ipynb  SelfAttention.ipynb  tokenizer.model
