[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "language_modeling_transformer_xai"
version = "0.0.1"
description = "Next Word Predictor, using transformers. Also xAI! More later..."
authors = [
  { name = "Siddharth \u0026 Aakriti" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["language_modeling_transformer_xai"]
include = ["pyproject.toml", "language_modeling_transformer_xai/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["language_modeling_transformer_xai"]
force-sort-within-sections = true

